# magma

./: Cargo.toml  README.md
assets/: shader.frag  shader.vert  triangle.frag
assets/shaders/: primitive.frag  primitive.vert  sprite.frag  sprite.vert  triangle.frag  triangle.vert
src/: engine.rs  lib.rs  main.rs
src/engine/: main_engine.rs  mod.rs  sdlhandler.rs
src/engine/ctx/: audio.rs  ctxhandler.rs  draw_objects.rs  framerate.rs  mod.rs  video.rs  vulkan.rs
src/engine/ctx/render/: draw_objects.rs  mod.rs  sendable.rs  vulkan.rs
src/engine/sdlhandler/: opengl.rs  vulkan.rs
src/engine/sdlhandler/vulkan/: sendable.rs
