[package]
name = "sdlfun"
version = "0.1.0"
authors = ["Meziu <meziu210@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
image = "0.23.14"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["gfx", "mixer"]
